# SCRIBBLE

./: .Cargo.toml.kate-swp  .gitignore  Cargo.toml  Cargo.toml.bak  README.md  build.zig  combined.img  config.spark  config.sparkle  launch.spk  linker.ld  magic_time.sh  mod.cr  run.sh  seed_wrapper.zig  setup.sh  setup_sparkle_repo.sh  sparkle_demo.sh  stdout  string_format.s  x86_64-scribble.json
boot/spINIT/: Cargo.toml  i686-spinup.json  linker.ld
boot/spINIT/src/: main.rs
boot/spinUP/: Cargo.toml  build.rs  build.sh
boot/spinUP/.cargo/: config.toml
boot/spinUP/src/: .main.rs.kate-swp  boot_params.rs  lib.rs  main.rs  memory.rs  serial.rs
boot/spun/: Cargo.toml
boot/spun/src/: main.rs
bootloader/: Cargo.toml  build.rs  build.sh  debug.txt  disk.img  linker.ld  x86_64-scribble.json
bootloader/gear1/: Cargo.toml  build.sh  disk.img  i686-scribble.json  linker.ld
bootloader/gear1/src/: main.rs
bootloader/gear2/: Cargo.toml  disk.img  linker.ld
bootloader/gear2/src/: main.rs
bootloader/src/: boot_params.rs  main.rs
lib/carve/: Cargo.toml  README.md
lib/carve/benches/: translation_benchmarks.rs
lib/carve/src/: .bash.rs.kate-swp  assy.rs  bash.rs  cplus  fish.rs  go.rs  html.rs  java.rs  js.rs  lib.rs  php.rs  prolog.rs  snek.rs  sql.rs  zig.rs
lib/carve/tests/: translation_tests.rs
lib/crystometer/: .gitignore  Cargo.toml  README.md  build.rs  build.zig  run_tests.sh  start_meter.sh
lib/crystometer/examples/: basic_usage.rs
lib/crystometer/julia/: Manifest.toml  Project.toml
lib/crystometer/src/: lib.rs
lib/error_derive/: Cargo.toml  README.md
lib/error_derive/src/: lib.rs
lib/error_derive/tests/: derive.rs
lib/error_integration/: Cargo.toml
lib/error_integration/benches/: error_benchmarks.rs
lib/error_integration/src/: context.rs  lib.rs  reporter.rs
lib/error_integration/tests/: integration_tests.rs
lib/error_recovery/: Cargo.toml
lib/error_recovery/src/: analysis.rs  core.rs  diagnostics.rs  lib.rs  macros.rs  metrics.rs  monitor.rs  reporting.rs  strategies.rs  validation.rs
lib/errors/: Cargo.toml  README.md
lib/errors/src/: core.rs  lib.rs
lib/garnet/: Cargo.toml  README.md  test.sh
lib/garnet/examples/: simple.rs
lib/garnet/src/: input.rs  lib.rs  terminal.rs
lib/harmony_core/: .README.md.kate-swp  Cargo.toml  Project.toml  README.md  bench.sh  bench_viz_simple.zig  build.zig  harmony_now.sh  harmony_now.sh.save  start_bragg.sh  start_shatter.sh  start_shatter.sh.save  start_shatter.sh.save.1  start_shatter.sh.save.2  start_shatter.sh.save.3  start_shatter.sh.save.4
lib/harmony_core/docs/: lastedit-Jan-23-2025.md
lib/harmony_core/examples/: dna_harmony.rs
lib/harmony_core/src/: aether.rs  align.rs  config.rs  constants.rs  crystal.rs  cube.rs  errors.rs  growth.rs  harmony.rs  hashbrown.rs  idk.rs  lib.rs  meshmath.rs  metrics.rs  monitor.rs  native.rs  phantom.rs  qubit.rs  scribe.rs  vector.rs  vectror_ops.rs  zeronaut.rs
lib/harmony_core/tests/: crystal_tests.rs  simd_test.rs  simd_tests.rs
lib/lazuline/: .gitignore  Cargo.toml  Cargo.toml.bak  Criterion.toml  Makefile  README.md  analyze_performance.sh  bench.sh  bench_output.tmp  build.zig  build.zig.backup  dev.sh  fix_build.sh  fix_builds.sh  fix_calibration.sh  fix_calibration_curve.sh  fix_ds18b20.sh  fix_errors.sh  fix_hardware_tests.sh  fix_i2c_bus.sh  fix_test_operators.sh  fix_tests.sh  fix_timer_sleep.sh  fix_timer_test.sh  fix_timers_channels.sh  hw.sh  moar_tests.sh  prettybench.sh  prettybench.sh.bak  quickfix.sh  runtime_setup.sh  setup_benchmarks.sh  setup_bio_memory.sh  setup_calibration.sh  setup_calibration_persistence.sh  setup_ds18b20.sh  setup_error_tests.sh  setup_ffi_tests.sh  setup_hardware_integration.sh  setup_harmonic_channels.sh  (+28 more)
lib/lazuline/bench/: channels_bench.zig  main.zig
lib/lazuline/benches/: crystal_bench.rs  lazuline_benchmarks.rs  lib.rs
lib/lazuline/docs/: lastedit-Jan-21-2025.md  lastedit-Jan-22-2025.md  lastedit-Jan-23-2025.md
lib/lazuline/examples/: basic_usage.zig  crystal_formation.zig  harmony_field.zig  main.zig
lib/lazuline/julia/: Project.toml
lib/lazuline/results/: 1.txt  2.txt  [1]-Jan-22-2025.md  [2]-Jan-22-2025.md  [3]-Jan-22-2025.md  benchmark-20250121-154200.txt  benchmark_20250121_193559.txt  benchmark_20250121_193559_summary.txt
lib/lazuline/scripts/: crystal_pattern.jl
lib/lazuline/src/: constants.zig  crystal.zig  harmonic.zig  harmony.zig  lib.rs  lib.zig  module.zig  wave_runtime.zig  whimsy.zig
lib/lazuline/tests/: calibration_persistence_test.zig  calibration_test.zig  channels_test.zig  ds18b20_test.zig  hardware_test.zig  harmonic_test.zig  i2c_test.zig  lib.rs  main.zig  tmp102_test.zig
lib/lazuline/zig/: build.zig
lib/magicmath/: Cargo.toml  README.md
lib/magicmath/benches/: vector_ops.rs
lib/magicmath/src/: add.rs  brot.rs  constants.rs  core.rs  deref.rs  derefmut.rs  div.rs  errors.rs  exp.rs  fibb.rs  floor.rs  fractal.rs  gold.rs  julia.rs  lib.rs  log.rs  mesh.rs  mul.rs  pi.rs  py.rs  resonance.rs  sqrt.rs  sub.rs  traits.rs  vector.rs  vector3d.rs  vector4d.rs
lib/mycelium/: Cargo.toml  README.md
lib/mycelium/src/: error.rs  harmony.rs  lib.rs  network.rs  node.rs  topology.rs  transport.rs
lib/mycelium/tests/: network_tests.rs  node_tests.rs  topology_tests.rs  transport_tests.rs
lib/opal/: .gitignore  Cargo.toml  Cargo.toml.backup  build.zig  fix_engine.sh  populate.sh  quick_fix.sh  run_benchmarks.sh  start_crystal.sh  start_engine.sh
lib/opal/benches/: benchmark.rs
lib/prism/: Cargo.toml  README.md  build.zig
lib/prismancer/: Cargo.toml  README.md  build.zig  init.sh
lib/quartz/: Cargo.toml  README.md
lib/resonance/: .gitignore  Cargo.toml  build.zig  fix_julia.sh  setup_resonance.sh
lib/scribble/: Cargo.toml  README.md
lib/scribe/: Cargo.toml  README.md
lib/shard/: Cargo.toml  README.md
lib/tides/: Cargo.toml  README.md  setup.sh
lib/unstable_matter/: Cargo.toml  README.md  sun_rise.rs
lib/wanda/: Cargo.toml  README.md  install.sh  wanda.service
lib/ziggy/: Cargo.toml  README.md  bench.rs  build.rs  build.zig
(+1299 files in other folders)
