# boot/spinUP/Cargo.toml
[package]
name = "spinup"  # Lowercase package name
version = "0.1.0"
edition = "2021"
authors = ["isdood"]

[dependencies]
spinit = { path = "../spINIT" }  # Use lowercase package name
unstable_matter = { path = "../../lib/unstable_matter" }
scribble = { path = "../../lib/scribble" }
