# boot/spun/Cargo.toml
[package]
name = "spun"
version = "0.1.0"
edition = "2021"
authors = ["isdood"]

[dependencies]
spinit = { path = "../spINIT" }  # Use lowercase package name
spinup = { path = "../spinUP" }  # Use lowercase package name
unstable_matter = { path = "../../lib/unstable_matter" }
scribble = { path = "../../lib/scribble" }

[package.metadata]
boot_stage = 3
stage_name = "Kernel"
last_updated = "2025-01-12T23:12:33Z"
maintainer = "isdood"
