[package]
name = "spinUP"
version = "0.1.0"
edition = "2021"
authors = ["Caleb J.D. Terkovics <calebjdt@gmail.com>"]

[dependencies]
volatile = "0.4.3"
spin = "0.9.2"
x86_64 = "0.14"
uart_16550 = "0.2"

[features]
default = []

# These ensure we can use inline assembly
[package.metadata]
cargo-features = ["asm"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
