[package]
name = "crystometer"
version = "0.1.0"
edition = "2021"
authors = ["isdood"]
description = "Crystal structure measurement and analysis toolset"
license = "MIT"
repository = "https://github.com/isdood/crystometer"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[lib]
name = "crystometer"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "crystal_bench"
harness = false

[features]
default = ["zig-core"]
zig-core = []
