[package]
name = "error_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
error_core = { path = "../error_core" }
error_derive = { path = "../error_derive" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = "0.3"
