[package]
name = "error_recovery"
version = "0.1.0"
edition = "2021"
authors = ["isdood"]
description = "Automated error recovery system for Scribble"
repository = "https://github.com/isdood/scribble"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
error_integration = { path = "../error_integration" }
tracing = "0.1"
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
