[package]
name = "errors"
version = "0.1.0"
edition = "2021"
authors = ["Caleb J.D. Terkovics <isdood>"]
description = "Error types for crystal computing systems"
license = "MIT"
repository = "https://github.com/isdood/scribble"

[dependencies]
scribe = { path = "../scribe" }

[package.metadata]
created = "2025-01-19 14:31:53"
updated = "2025-01-19 14:31:53"
current_user = "isdood"
