[package]
name = "harmony_core"
version = "0.1.0"
edition = "2021"
authors = ["Caleb J.D. Terkovics <isdood>"]
description = "Harmonic core functionality for scribble"
repository = "https://github.com/isdood/scribble"
license = "MIT"

[dependencies]
libm = "0.2.11"

[lib]
name = "harmony_core"
path = "src/lib.rs"
