[package]
name = "harmony_core"
version = "0.1.0"
edition = "2021"
authors = ["Caleb J.D. Terkovics <isdood>"]
description = "Harmonic core functionality for scribble"
repository = "https://github.com/isdood/scribble"
license = "MIT"

[dependencies]
libm = "0.2.11"
meshmath = "0.1.0"  # Add meshmath dependency
shard = { path = "../shard" }  # Add shard dependency

[features]
default = ["std"]
std = []
no_std = []

[[test]]
name = "simd_tests"
path = "tests/simd_tests.rs"
