[package]
name = "harmony_core"
version = "0.1.1"
edition = "2021"
authors = ["Caleb J.D. Terkovics <isdood>"]
description = "Harmonic core functionality for scribble"
repository = "https://github.com/isdood/scribble"
license = "MIT"

[dependencies]
magicmath = { path = "../magicmath" }
scribe = { path = "../scribe" }

[[test]]
name = "simd_tests"
path = "tests/simd_tests.rs"
