[package]
name = "lazuline"
version = "0.1.0"
edition = "2021"
authors = ["isdood"]
description = "Crystal-based high-performance computing framework"
repository = "https://github.com/isdood/scribble"
license = "MIT"

[dependencies]
futures = "0.3"
num_cpus = "1.15"

[lib]
name = "lazuline"
crate-type = ["cdylib", "rlib"]
