[package]
name = "opal"
version = "0.1.0"
edition = "2021"
authors = ["isdood"]
description = "OPAL - Optimized Performance Adaptive Lattice"

[dependencies]
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1

[lib]
name = "opal"
path = "src/lib.rs"

[workspace]
members = ["."]
