[package]
name = "opal"
version = "0.1.0"
edition = "2021"
authors = ["isdood"]
description = "OPAL - High Performance Computing Visualization Engine"

[dependencies]
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
log = "0.4"
env_logger = "0.10"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
async-std = "1.12"

[[example]]
name = "basic"
path = "examples/visualization/basic.rs"
