[package]
name = "opal"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wgpu = "0.17"
tokio = { version = "1.32.0", features = ["full"] }
winit = "0.28"
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
magicmath = { path = "../magicmath" }
errors = { path = "../errors" }

[lib]
name = "opal"
path = "src/lib.rs"

[[example]]
name = "crystal_demo"
path = "examples/crystal_demo.rs"
