[package]
name = "prism"
version = "0.1.0"
authors = ["Caleb J.D. Terkovics <isdood>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/isdood/scribble"
description = "Prism - A high-performance crystal pattern simulation system"

[dependencies]
num_cpus = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lib]
name = "prism"
path = "src/lib.rs"

# Metadata
[package.metadata]
created = "2025-01-19"
updated = "2025-01-21 11:57:13"
current_user = "isdood"
