[package]
name = "prism"
version = "0.1.0"
authors = ["Caleb J.D. Terkovics <isdood>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/isdood/scribble"
description = "Prism - A high-performance crystal pattern simulation system"

[dependencies]
num_cpus = "1.16"
parking_lot = "0.12"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
magicmath = { path = "../magicmath" }
scribe = { path = "../scribe" }
errors = { path = "../errors" }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "prism"
path = "src/lib.rs"

[package.metadata]
created = "2025-01-19"
updated = "2025-01-21 12:38:24"
current_user = "isdood"
