[package]
name = "prismancer"
version = "0.1.0"
edition = "2021"
authors = ["isdood"]
description = "A crystal-based high-performance game engine built on the Scribble framework"
repository = "https://github.com/isdood/scribble"
license = "MIT"
readme = "README.md"
categories = ["game-engines", "graphics", "physics"]
keywords = ["gamedev", "crystal-computing", "quantum", "vulkan", "physics"]

[workspace]
members = [
    "crates/core",
    "crates/render",
    "crates/physics",
    "crates/systems",
    "crates/parallel",
]

[dependencies]
# Core dependencies
rayon = "1.8"                    # Parallel computing
parking_lot = "0.12"            # Fast synchronization primitives
crossbeam = "0.8"               # Concurrent data structures
hashbrown = "0.14"              # Fast hash maps
smallvec = "1.11"               # Stack-based vector optimization

# Rendering
ash = "0.37"                    # Vulkan bindings
gpu-allocator = "0.22"          # GPU memory management
shaderc = "0.8"                 # Shader compilation
glam = "0.24"                   # SIMD-optimized math

# Crystal computing
num = "0.4"                     # Numerical computations
nalgebra = "0.32"              # Linear algebra
ndarray = "0.15"               # N-dimensional arrays
quantum = { path = "crates/quantum", version = "0.1.0" }

# Physics
rapier3d = "0.17"              # Physics engine
parry3d = "0.13"               # Collision detection
julia = { path = "crates/julia-sys", version = "0.1.0" }

# ECS (Entity Component System)
hecs = "0.10"                  # ECS implementation
legion = "0.4"                 # Alternative ECS for comparison

# Utilities
log = "0.4"                    # Logging
env_logger = "0.10"            # Logging configuration
thiserror = "1.0"             # Error handling
anyhow = "1.0"                # Error propagation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"            # JSON serialization
toml = "0.8"                  # TOML configuration

[dev-dependencies]
criterion = "0.5"              # Benchmarking
proptest = "1.3"              # Property testing
mock-it = "0.5"               # Mocking
test-case = "3.3"             # Test organization

[build-dependencies]
cbindgen = "0.26"             # C binding generation
bindgen = "0.69"              # FFI binding generation
cmake = "0.1"                 # Build system integration

[features]
default = ["vulkan", "quantum-effects", "parallel"]
vulkan = ["ash", "gpu-allocator"]
quantum-effects = ["quantum"]
parallel = ["rayon"]
profile = ["criterion"]

# Optimization features
simd = []
lto = []
cache-coherence = []

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "physics"
harness = false

[[bench]]
name = "render"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.bundle]
name = "Prismancer Engine"
identifier = "com.isdood.prismancer"
version = "0.1.0"
copyright = "Copyright © 2025 isdood"
category = "Developer Tool"
short_description = "Crystal-based game engine"
long_description = """
Prismancer is a next-generation game engine that leverages crystal computing
principles for high-performance rendering and physics simulation.
"""

[lib]
name = "prismancer"
crate-type = ["cdylib", "rlib"]
