[package]
name = "resonance"
version = "0.1.0"
edition = "2021"
authors = ["isdood"]
description = "A crystal-based harmony computing library"

[lib]
name = "resonance"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
futures = "0.3"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tokio-test = "0.4"
