[package]
name = "scribble"
version = "0.1.0"
edition = "2021"
authors = ["Caleb J.D. Terkovics <isdood>"]
description = "Core scribble library functionality"
repository = "https://github.com/isdood/scribble"
license = "MIT"

[dependencies]
unstable_matter = { path = "../unstable_matter" }
libm = "0.2.11"

[lib]
name = "scribble"
path = "src/lib.rs"
