[package]
name = "scribe"
version = "0.1.0"
edition = "2021"
authors = ["Caleb J.D. Terkovics <isdood>"]
description = "Native string formatting and display system for crystal computing"
license = "MIT"
repository = "https://github.com/isdood/scribble"

[dependencies]
# No external dependencies - native implementation

[package.metadata]
created = "2025-01-19 14:32:23"
updated = "2025-01-19 14:32:23"
current_user = "isdood"
