[package]
name = "shard"
version = "0.1.0"
edition = "2021"
authors = ["Caleb J.D. Terkovics <isdood>"]
description = "Quantum memory and crystal structure management"
repository = "https://github.com/isdood/scribble"
license = "MIT"

[dependencies]
# Core system dependencies
libm = "0.2.11"

# Use scribble from workspace
scribble = { path = "../scribble" }  # Point to sibling directory

[features]
default = ["std"]
std = []
quantum_acceleration = []
crystal_optimization = []

[lib]
name = "shard"
path = "src/lib.rs"
