[package]
name = "tides"
version = "0.1.0"
edition = "2021"
description = "Wave-based crystal computing framework with harmonic resonance and wave distribution"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

# FFI dependencies
julia = "0.1"
chapel = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
