[package]
name = "unstable_matter"
version = "0.1.0"
edition = "2021"
authors = ["Caleb J.D. Terkovics <isdood>"]
description = "A quantum-unstable matter management system for the Scribble kernel"
repository = "https://github.com/isdood/scribble"
license = "MIT"

[dependencies]
harmony_core = { path = "../harmony_core" }
libm = "0.2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
clap = "4.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[[example]]
name = "mesh_clock_demo"
path = "examples/mesh_clock_demo.rs"

[lib]
name = "unstable_matter"
path = "src/lib.rs"
