[package]
name = "wanda"
version = "0.1.0"
authors = ["isdood <calebjdt@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2"

[[bin]]
name = "wanda"
path = "src/wanda.rs"
