[package]
name = "wanda"
version = "0.1.0"
edition = "2021"
authors = ["isdood"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0"
env_logger = "0.10"
log = "0.4"

[[bin]]
name = "wanda"
path = "src/bin/wanda.rs"

[[bin]]
name = "wandad"
path = "src/bin/wandad.rs"
