[package]
name = "ziggy"
version = "0.1.0"
edition = "2021"
authors = ["Caleb J.D. Terkovics <isdood>"]
description = "Zig integration module for Scribble"
license = "MIT"

[lib]
name = "ziggy"
path = "src/lib.rs"

[[bench]]
name = "vector_ops"
harness = false

[dependencies]
libc = "0.2"
thiserror = "1.0"
approx = "0.5"
scribe = { path = "../scribe" }

[dev-dependencies]
criterion = "0.5"

# Metadata
[package.metadata]
created = "2025-01-20"
updated = "2025-01-20 16:29:45"
current_user = "isdood"
